termino da navbar e adição do arquivo mySQL

--- a/php/menu.html
+++ b/php/menu.html
@@ -58,30 +58,25 @@
                             <div class="card-content">
 
                                 <div class="form-field">
-                                    <label for="Usuario">Nome Completo</label>
-                                    <input type="text" id="nome_usuario">
+                                    <label for="nome">Nome Completo</label>
+                                    <input type="text" id="nome">
                                 </div><br>
 
                                 <div class="form-field ">
                                     <label>Sexo:</label><br><br>
                                     <label>
-                                                    <input class="radioM"name="sexo" type="radio" checked />
+                                                    <input class="radioM" id="sexo" name="sexo" type="radio" />
                                                     <span>Masculino</span>
                                                 </label>
                                     <label class="radioF">
-                                                    <input name="sexo" type="radio" />
+                                                    <input id="sexo" name="sexo" type="radio" />
                                                     <span>Feminino</span>
                                                 </label>
                                 </div><br>
 
                                 <div class="input-field">
                                     <label for="dataNascimento">Data de Nascimento</label><br>
-                                    <input id="dataNascimento" type="date">
-                                </div><br>
-
-                                <div class="form-field">
-                                    <label for="Usuario">Nome de  login</label>
-                                    <input type="text" id="login_usuario">
+                                    <input id="nascimento" type="date">
                                 </div><br>
 
                                 <div class="form-field">
@@ -96,7 +91,7 @@
 
                                 <div class="form-field">
                                     <label for="senha2">Confirme sua senha</label>
-                                    <input type="password" id="senha2">
+                                    <input type="password" id="senha_confirmacao">
                                 </div><br>
 
 
@@ -141,7 +136,7 @@
                                 </div><br>
 
                                 <div class="form-field">
-                                    <label for="senha2">Senha</label>
+                                    <label for="senha">Senha</label>
                                     <input type="password" id="senha">
                                 </div><br><br>
 
